# wordle-helper

./: README.rst  setup.cfg
src/wordle_helper/: __init__.py
src/wordle_helper/data/: sgb-words.txt.ABOUT
