[metadata]
name = wordle_helper
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Wordle helper
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/JonoYang/wordle-helper

author = Jono Yang
author_email = the.jonathan.yang@gmail.com

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.6.*

install_requires =
    sqlalchemy == 1.4.32
    click == 8.0.4

[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black
    isort

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1

[options.entry_points]
console_scripts =
    wordle_helper = wordle_helper:cli
